force-app/main/default/staticresources/python/Disappear/src/objects/PubStudy__c.object
<CustomObject>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsSelected is used for UI Operation - please do not store or migrate data in this field</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PASS__c</fullName>
        <formula>Study__r.PASS__c</formula>
        <label>PASS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PubStudies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <label>SiebelRowId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipName>PubStudies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publication Study/Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Study__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PubStudy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Studies/Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>